ffi/include/tav/cose.h

/*
 * C ABI for CBOR parsing/navigation and COSE_Sign1 verification.
 * The tav_cbor_value_* functions are deprecated; use tav/cbor.h instead.
 * COSE validation, verification, types, and constants remain supported.
 * Legacy parsing owns its input payloads and parsing/serialization use depth 64.
 * The generic API borrows input and lets callers select a depth up to 256.
 * Both handle types use the same representation. An explicit pointer cast
 * between TavCborValue* and TavCborHandle* is supported without copying or
 * transferring ownership. Never cast an output slot (a pointer-to-pointer).
 * Release each handle exactly once, preferably with tav_cbor_free.
 * For generic borrowed values, keep input alive and unchanged while any
 * derived handle remains, including handles returned by COSE validation.
 *
 * Ownership and lifetime:
 * - Every TavCborValue returned through an out-parameter is independently owned
 *   and must be released with tav_cbor_value_free.
 * - Projected child and validated COSE_Sign1 handles share their immutable CBOR
 *   document without cloning it and remain valid after parent handles are freed.
 * - Byte/text accessors return borrowed views. The returned data remains valid
 *   only while the TavCborValue passed to the accessor remains alive.
 * - tav_cbor_value_to_bytes writes an owned TavByteBuffer* through out_bytes.
 *   Read it with tav_byte_buffer_data/tav_byte_buffer_len and release it with
 *   tav_byte_buffer_free.
 * - Freeing NULL owned handles is a no-op.
 * - Owned out-parameters are write-only: pass a non-NULL pointer to a handle
 *   slot. The slot is set to NULL before any fallible work and set to an owned
 *   handle only on success.
 * - Error accessors are defensive for NULL TavError pointers:
 *   tav_error_code returns TAV_ERROR_IS_NULL and tav_error_message returns
 *   a static diagnostic string.
 */

typedef enum TavCborKind {
    TAV_CBOR_KIND_INT = 1,
    TAV_CBOR_KIND_SIMPLE = 2,
    TAV_CBOR_KIND_BYTES = 3,
    TAV_CBOR_KIND_TEXT = 4,
    TAV_CBOR_KIND_ARRAY = 5,
    TAV_CBOR_KIND_MAP = 6,
    TAV_CBOR_KIND_TAGGED = 7,
} TavCborKind;
typedef struct TavCborValue TavCborValue;
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_from_bytes(
    const uint8_t *bytes,
    size_t len,
    TavCborValue **out_value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_to_bytes(
    const TavCborValue *value,
    TavByteBuffer **out_bytes);
/* value must be a valid, non-NULL TavCborValue handle. */
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavCborKind tav_cbor_value_kind(const TavCborValue *value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_int(
    const TavCborValue *value,
    int64_t *out);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_simple(
    const TavCborValue *value,
    uint8_t *out);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_bytes(
    const TavCborValue *value,
    const uint8_t **data,
    size_t *len);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_text(
    const TavCborValue *value,
    const char **text,
    size_t *len);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_tag(
    const TavCborValue *value,
    uint64_t *out);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_tagged_payload(
    const TavCborValue *value,
    TavCborValue **out_value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_len(
    const TavCborValue *value,
    size_t *out);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_array_at(
    const TavCborValue *value,
    size_t index,
    TavCborValue **out_value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_at_int(
    const TavCborValue *value,
    int64_t key,
    TavCborValue **out_value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_at_text(
    const TavCborValue *value,
    const char *key,
    size_t key_len,
    TavCborValue **out_value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_at(
    const TavCborValue *value,
    const TavCborValue *key,
    TavCborValue **out_value);
TAV_COSE_CBOR_DEPRECATED TAV_COSE_API TavError *tav_cbor_value_map_has_int_key(
    const TavCborValue *value,
    int64_t key,
    bool *out);